Overflow fix for background when scrollbar is visible + responsiveness on md layout

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,5 @@ app {
 	background: #edf2f7;
 	display: flex;
 	height: 100%;
+	overflow: auto;
 }
