--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -12,9 +12,9 @@ player {
 	}
 
 	@media screen and(min-width : $xs + 1) and (max-width : $sm) {
-		flex: 1 1 150px;
-		max-width: 150px;
-		height: 225px;
+		flex: 1 1 140px;
+		max-width: 140px;
+		height: 210px;
 	}
 
 	flex: 1 1 200px;
